# RandS3

./: .gitignore  CMakeLists.txt  README.md  build_and_merge.sh  gen_font.sh  platformio.ini  sdkconfig.defaults  themes.json
scripts/: chars.txt  extract_chars.py  gen_font.sh  pre_build.py  process_dice_assets.py
simulator/: CMakeLists.txt  main_sim.c  test_auto.c  test_cmds.txt
src/: lv_conf.h  lvgl_init.py  main.cpp
src/core/: Slot.cpp  Slot.h  answer_data.c  answer_data.h  dice_wav.h  i18n.c  i18n.h  lv_font_cn_16.c  mbti_data.c  mbti_data.h  settings.cpp  settings.h  sys_info.cpp  sys_info.h  wifi_manager.c  wifi_manager.h
src/images/: die_test.py  png_assets.c  png_assets.h
src/ui/: app_manager.c  app_manager.h  ui_theme.c  ui_theme.h
src/ui/screens/: screen_answer.c  screen_answer.h  screen_dice.cpp  screen_dice.h  screen_mbti.c  screen_mbti.h  screen_menu.c  screen_menu.h  screen_settings.c  screen_settings.h  screen_slot_settings.c  screen_slot_settings.h  screen_slots.cpp  screen_slots.h  screen_wifi.c  screen_wifi.h
